--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ Pillow==9.5.0
 pydicom==2.3.1
 scikit-image==0.20.0
 scipy==1.9.1
-torch==1.10.1+cu111 torchvision==0.11.2+cu111 -f https://download.pytorch.org/whl/cu111/torch_stable.html
+torch==1.10.1+cu111 -f https://download.pytorch.org/whl/cu111/torch_stable.html
+torchvision==0.11.2+cu111 -f https://download.pytorch.org/whl/cu111/torch_stable.html
 plyfile==0.9
 trimesh==3.21.7
 tqdm==4.65.0
