--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-imageio==2.28.1
-numpy==1.24.3
-Pillow==9.5.0
-pydicom==2.3.1
-scikit-image==0.20.0
-scipy==1.9.1
-torch==1.10.1
-torchvision==0.11.2
-plyfile==0.9
-trimesh==3.21.7
-xvfbwrapper==0.2.9
-plotly==5.14.1
-matplotlib==3.7.1
-open3d==0.17.0
-pyvista==0.39.1
-meshio==5.3.4
-opencv-python==4.7.0.72
-kaleido==0.2.1
-h5py==3.8.0
+imageio>=2.28.1
+numpy>=1.24.3
+Pillow>=9.5.0
+pydicom>=2.3.1
+scikit-image>=0.20.0
+scipy>=1.9.1
+torch>=1.10.1
+torchvision>=0.11.2
+plyfile>=0.9
+trimesh>=3.21.7
+xvfbwrapper>=0.2.9
+plotly>=5.14.1
+matplotlib>=3.7.1
+open3d>=0.17.0
+pyvista>=0.39.1
+meshio>=5.3.4
+opencv-python>=4.7.0.72
+kaleido>=0.2.1
+h5py>=3.8.0
